base-setting-part-1

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,1 +1,12 @@
-$body-bg-color: #ffffff;
+$bg-color: #ffb8ca;
+$menu-bg-color: #e17992;
+$primary-color: #d41443;
+$secondary-color: #ffffff;
+$text-black-color: #000000;
+$text-grey-color: #907e82;
+$button-primary-color: #d41443;
+$button-secondary-color: #ffffff;
+$button-hover-color: #ecebeb;
+$ice-cream-pl-bg-color: #ffb8ca;
+$ice-coffee-pl-bg-color: #f0d1a5;
+$milkshakes-pl-bg-color: #c2e297;
