--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,6 @@
-@import './common';
-@import './example';
+@import './utils/base';
+@import './utils/variables';
+@import './mobile-menu';
+@import './header';
+@import './hero';
+@import './';
