--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -2,6 +2,11 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  font-family: 'DM Sans', sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -28,15 +33,16 @@ img {
 .container {
   margin-left: auto;
   margin-right: auto;
-  //   padding-right: 15px;
-  //   padding-left: 15px;
-  //   @media screen and (min-width: 480px) {
-  //     width: 480px;
-  //   }
-  //   @media screen and (min-width: 768px) {
-  //     width: 768px;
-  //   }
-  //   @media screen and (min-width: 1200px) {
-  //     width: 1200px;
-  //   }
+  @media screen and (max-width: 768px) {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
