base-settings-part-2

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,14 @@
+@import './common';
 @import './utils/base';
 @import './utils/variables';
 @import './mobile-menu';
+@import './menu';
+@import './button';
 @import './header';
 @import './hero';
-@import './';
+@import './product';
+@import './made';
+@import './gallery';
+@import './slider';
+@import './footer';
+@import './modal';
