--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -5,6 +5,7 @@ html {
 
 body {
   margin: 0;
+  font-family: 'DM Sans', sans-serif;
 }
 
 h1,
@@ -39,6 +40,20 @@ img {
   .container {
     padding-right: 20px;
     padding-left: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    padding-right: 16px;
+    padding-left: 16px;
   }
 }
 
@@ -91,44 +106,6 @@ img {
   font-weight: 400;
   font-size: 48px;
   line-height: 96.5%;
-  color: #d41443;
-}
-
-.button__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.button {
-  margin-top: 20px;
-  font-family: 'DM Sans';
-  font-style: normal;
-  text-align: center;
-  border: none;
-  cursor: pointer;
-}
-
-.button__primary {
-  margin-right: 8px;
-  border-radius: 12px;
-  width: 62px;
-  height: 24px;
-  background-color: #d41443;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 10px;
-  color: #ffffff;
-}
-
-.button__secondary {
-  border-radius: 12px;
-  width: 82px;
-  height: 24px;
-  background-color: #ffffff;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 10px;
   color: #d41443;
 }
 /*# sourceMappingURL=index.css.map */
