--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,8 +7,11 @@
 @import './header';
 @import './hero';
 @import './product';
+@import './product-item';
 @import './made';
 @import './gallery';
 @import './slider';
+@import './contact';
+@import './contact-item';
 @import './footer';
 @import './modal';
