--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -20,29 +20,45 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.link {
+a {
   text-decoration: none;
 }
 
-.list {
+ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  @media screen and (max-width: 768px) {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
+  padding-right: 20px;
+  padding-left: 20px;
+
   @media screen and (min-width: 768px) {
     padding-right: 32px;
     padding-left: 32px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     padding-right: 16px;
     padding-left: 16px;
   }
+}
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
