--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,7 +4,7 @@ $primary-color: #d41443;
 $secondary-color: #ffffff;
 $text-black-color: #000000;
 $text-grey-color: #907e82;
-$button-primary-color: #d41443;
+$button-primary-color: #c7133e;
 $button-secondary-color: #ffffff;
 $button-hover-color: #ecebeb;
 $ice-cream-pl-bg-color: #ffb8ca;
