--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop " data-modal>
   <div class="modal">
-    <button class="modal_button" data-modal-close>
+    <button class="modal__button" data-modal-close >
       <svg width="13.48" height="14">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
