--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,11 +1,11 @@
+@import '~node_modules/modern-normalize/modern-normalize.css';
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 h1,
@@ -35,21 +35,18 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-
 @media screen and (max-width: 768px) {
   .container {
     padding-right: 20px;
     padding-left: 20px;
   }
 }
-
 @media screen and (min-width: 768px) {
   .container {
     padding-right: 32px;
     padding-left: 32px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .container {
     padding-right: 16px;
@@ -62,50 +59,178 @@ img {
 }
 
 .header {
-  padding-top: 8px;
   background-color: #ffb8ca;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
-.header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.header .container {
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .header .container {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
-.hero {
-  background-color: #ffb8ca;
-  background-image: url("../images/ice-creem.png");
-  background-repeat: no-repeat;
-  background-position: right -62px bottom 0px;
-}
-
-.hero__container {
-  padding-top: 136px;
-  padding-bottom: 158px;
-}
-
-.hero__text {
-  font-family: 'Titan One';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 30px;
+.header__logo {
+  font-family: "Titan One";
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 1.125;
+  display: flex;
+  align-items: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  color: #d41442;
+}
+
+.logo-icon {
+  margin-right: 16px;
+}
+
+.tel-menu-open {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .tel-menu-open {
+    margin-left: auto;
+    margin-right: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tel-menu-open {
+    display: none;
+  }
+}
+
+.header__tablet-button {
+  background: #ffffff;
+  border-radius: 28px;
+  width: 160px;
+  height: 44px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #d41443;
+  transition: background-color 250ms linear;
+}
+@media screen and (max-width: 767px) {
+  .header__tablet-button {
+    display: none;
+  }
+}
+
+.tablet-buttot-svg {
+  margin-left: 14px;
+}
+
+.header-nav__list {
+  display: flex;
+  padding: 0;
+}
+@media screen and (max-width: 1279px) {
+  .header-nav__list {
+    display: none;
+  }
+}
+
+.header-nav__item:not(:last-child) {
+  margin-right: 35px;
+}
+
+.header-nav__link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3;
   color: #ffffff;
 }
 
-.hero__text--red {
-  font-weight: 400;
-  font-size: 48px;
-  line-height: 96.5%;
-  color: #d41443;
+/* tell menu */
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
-/*# sourceMappingURL=index.css.map */
+
+.tel-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 58px;
+  background-color: #e17992;
+}
+@media screen and (min-width: 768px) {
+  .tel-menu {
+    width: 254px;
+  }
+}
+
+.tel-menu-close {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.tel-menu__button {
+  background: #ffffff;
+  border-radius: 28px;
+  width: 209px;
+  height: 44px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: #d41443;
+  transition: background-color 250ms linear;
+}
+
+.tel-menu__button:hover,
+.tel-menu__button:focus {
+  background-color: #ecebeb;
+}
+
+.tel-buttot-svg {
+  margin-left: 21px;
+}
+
+.tel-menu__item {
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.tel-menu__list {
+  padding: 0;
+}
+
+.tel-menu__link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  color: #ffffff;
+  padding-left: 20px;
+}/*# sourceMappingURL=index.css.map */
