--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,13 +1,12 @@
-
-@import '~node_modules/modern-normalize/modern-normalize.css';
-
+@import url(/Users/olegstarko/Desktop/parcel-project-template/node_modules/modern-normalize/modern-normalize.css);
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: "DM Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 h1,
@@ -40,24 +39,35 @@ ul {
 .container {
   margin-left: auto;
   margin-right: auto;
-
-
-
-.tel-menu__item {
-  border-top: 1px solid #e18298;
-  border-bottom: 1px solid #e18298;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.tel-menu__list {
-  padding: 0;
-}
-
-.tel-menu__link {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.29;
-  color: #ffffff;
+  padding-right: 20px;
   padding-left: 20px;
-}/*# sourceMappingURL=index.css.map */
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+}
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+/*# sourceMappingURL=index.css.map */
