--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop " data-modal>
+<div class="backdrop is-hidden  " data-modal>
   <div class="modal">
     <button class="modal__button" data-modal-close >
       <svg width="13.48" height="14">
@@ -34,6 +34,7 @@
               <use href="./images/symbol-defs.svg#icon-check-box"></use>
             </svg>
           </span>
+          I agree and accept <span class="accept">the terms of the contract</span>
         </label>
       </div>
       <div class="form__button-wrap">
