--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -30,13 +30,13 @@
         <input class="form__checkbox form__visually" type="checkbox" name="check" id="check">
         <label for="check" class="form__agreement">
           <span class="form__icon-check">
-            <svg>
+            <svg class="form__svg-check">
               <use href="./images/symbol-defs.svg#icon-check-box"></use>
             </svg>
           </span>
-          I agree and accept <span class="accept">the terms of the contract</span>
+          I agree and accept <a href="" class="accept">the terms of the contract</a>
         </label>
-      </div>
+      </div> 
       <div class="form__button-wrap">
         <button class="form__button" type="submit"><span class="form__button-text">Send</span></button>
       </div>
