--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -22,22 +22,30 @@
   position: absolute;
   top: 50%;
   left: 50%;
-
-  max-width: 498px;
-  height: 686px;
-  padding: 0px 32px;
  
   transform: translate(-50%, -50%);
   z-index: 1000;
   overflow-y: scroll;
 
   background-color: $ice-cream-pl-bg-color;
+  background-image: url(../images/desktop/milk-desktop-1x.png);
   border-radius: 24px;
 
   &:target {
     opacity: 1;
     pointer-events: auto;
     overflow-y: auto;
+  }
+ 
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    height: 686px;
+    overflow: hidden;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 498px;
+      height: 686px;
+      padding: 0px 32px;
   }
 }
 
@@ -47,7 +55,7 @@
   align-items: center;
   position: absolute;
   top: 8px;
-  margin-left: 250px;
+  margin-left: 430px;
 
   width: 30px;
   height: 30px;
@@ -67,6 +75,7 @@
 }
 
 .modal__text {
+  margin-top: 50px;
   font-family: 'Titan One';
   font-style: normal;
   font-weight: 400;
@@ -128,7 +137,10 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 22px;
   outline: none;
-  cursor: pointer;
+  cursor: pointer;;
+}
+input::placeholder, textarea::placeholder {
+  color: rgba(199, 19, 62, 0.3);
 }
 
 .form__wrap {
@@ -167,6 +179,7 @@
 
   width: 138px;
   height: 40px;
+  margin-top: 24px;
 
   background-color: $primary-color;
   border-radius: 20px;
@@ -199,15 +212,8 @@
 .form__svg {
   width: 100%;
   height: 40px;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
   outline: none;
   cursor: pointer;
-
-  &:focus {
-    border-color: $button-primary-color;
-  }
 }
 
 .form__svg-check {
@@ -240,6 +246,8 @@
 }
 .accept {
   color: $primary-color;
+  padding-left: 5px;
+  border-bottom: 1px solid $primary-color;
 }
 .form__text {
   position: absolute;
@@ -291,8 +299,7 @@
 }
 
 .form__checkbox:checked+.form__agreement .form__icon-check {
-  background-color: $primary-color;
-  border: none;
+  border-color: $primary-color;
 }
 
 .form__checkbox:checked+.form__agreement .form__svg-check {
