--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -99,19 +99,31 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  max-width: 498px;
-  height: 686px;
-  padding: 0px 32px;
   transform: translate(-50%, -50%);
   z-index: 1000;
   overflow-y: scroll;
   background-color: #ffb8ca;
+  background-image: url(../images/desktop/milk-desktop-1x.png);
   border-radius: 24px;
 }
 .modal:target {
   opacity: 1;
   pointer-events: auto;
   overflow-y: auto;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 100%;
+    height: 686px;
+    overflow: hidden;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 498px;
+    height: 686px;
+    padding: 0px 32px;
+  }
 }
 
 .modal__button {
@@ -120,7 +132,7 @@ ul {
   align-items: center;
   position: absolute;
   top: 8px;
-  margin-left: 250px;
+  margin-left: 430px;
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -136,6 +148,7 @@ ul {
 }
 
 .modal__text {
+  margin-top: 50px;
   font-family: "Titan One";
   font-style: normal;
   font-weight: 400;
@@ -198,6 +211,18 @@ ul {
   cursor: pointer;
 }
 
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: rgba(199, 19, 62, 0.3);
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: rgba(199, 19, 62, 0.3);
+}
+
+input::placeholder, textarea::placeholder {
+  color: rgba(199, 19, 62, 0.3);
+}
+
 .form__wrap {
   display: flex;
 }
@@ -233,6 +258,7 @@ ul {
   cursor: pointer;
   width: 138px;
   height: 40px;
+  margin-top: 24px;
   background-color: #d41443;
   border-radius: 20px;
   cursor: pointer;
@@ -259,14 +285,8 @@ ul {
 .form__svg {
   width: 100%;
   height: 40px;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
   outline: none;
   cursor: pointer;
-}
-.form__svg:focus {
-  border-color: #d41443;
 }
 
 .form__svg-check {
@@ -302,6 +322,8 @@ ul {
 
 .accept {
   color: #d41443;
+  padding-left: 5px;
+  border-bottom: 1px solid #d41443;
 }
 
 .form__text {
@@ -357,8 +379,7 @@ ul {
 }
 
 .form__checkbox:checked + .form__agreement .form__icon-check {
-  background-color: #d41443;
-  border: none;
+  border-color: #d41443;
 }
 
 .form__checkbox:checked + .form__agreement .form__svg-check {
