--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,28 +1,34 @@
-<footer class="footer container">
-  <div class="tagline">
-    <p class="tagline__text">homemade ice cream made</p>
-    <p class="tagline__text-secondary">with passion</p>
+<footer class="footer">
+  <div class="footer-wrap container"> 
+    <div class="wrap">
+      <div class="tagline">
+        <p class="tagline__text">homemade ice cream made</p>
+        <p class="tagline__text-secondary">with passion</p>
+      </div>
+      <div class="social-contact">
+        <div class="social"> 
+          <a href="https://github.com" class="social__link">
+            <svg class="social__icon" width="34" height="34">
+              <use href="./images/symbol-defs.svg#icon-github"></use>
+            </svg>
+          </a>
+          <a href="https://web.telegram.org" class="social__link">
+            <svg class="social__icon" width="34" height="34">
+              <use href="./images/symbol-defs.svg#icon-telegram"></use>
+            </svg>
+          </a> 
+          <a href="https://www.facebook.com" class="social__link">
+            <svg class="social__icon" width="34" height="34">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="contact">
+          <p class="contact__text">Feel free to contact</p>
+          <a href="tel:+61(0)383766284" class="contact__link">+61 (0) 383 766 284</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__copiriht">© 2019 - IceCream. All Rights Reserved.</div>
   </div>
-  <div class="social">
-    <a href="https://github.com" class="social__link">
-      <svg class="social__icon" width="34" height="34">
-        <use href="./images/symbol-defs.svg#icon-github"></use>
-      </svg>
-    </a>
-    <a href="https://web.telegram.org" class="social__link">
-      <svg class="social__icon" width="34" height="34">
-        <use href="./images/symbol-defs.svg#icon-telegram"></use>
-      </svg>
-    </a>
-    <a href="https://www.facebook.com" class="social__link">
-      <svg class="social__icon" width="34" height="34">
-        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-      </svg>
-    </a>
-  </div>
-  <div class="contact">
-    <p class="contact__text">Feel free to contact</p>
-    <a href="tel:+61(0)383766284" class="contact__link">+61 (0) 383 766 284</a>
-  </div>
-  <div class="footer__copiriht">© 2019 - IceCream. All Rights Reserved.</div>
 </footer>
