--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <div class="footer__copiriht">© 2019 - IceCream. All Rights Reserved.</div>
+    <div class="footer__copyright">© 2019 - IceCream. All Rights Reserved.</div>
   </div>
 </footer>
