--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -74,7 +74,7 @@
   
   color: $primary-color;
 }
-.footer__copiriht {
+.footer__copyright {
   display: flex;
   align-items: center;
   justify-content: center;
