--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -155,7 +155,7 @@ ul {
   color: #d41443;
 }
 
-.footer__copiriht {
+.footer__copyright {
   display: flex;
   align-items: center;
   justify-content: center;
