--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,9 +1,9 @@
 <div class="backdrop is-hidden  " data-modal>
-  <div class="modal">
+  <div class="modal container">
     <button class="modal__button" data-modal-close >
-      <svg width="13.48" height="14">
+      <svg width="14" height="14">
         <use href="./images/symbol-defs.svg#icon-close"></use>
-      </svg>
+      </svg> 
     </button>
     <p class="modal__text">order form</p>
     <form class="form">
