--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -39,34 +39,22 @@
  
   @media screen and (max-width: 767px) {
     width: 100%;
-    height: 686px;
     overflow: hidden;
   }
   @media screen and (min-width: 768px) {
     max-width: 498px;
-      height: 686px;
-      padding: 0px 32px;
   }
 }
 
 .modal__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-  top: 8px;
-  margin-left: 430px;
-
-  width: 30px;
-  height: 30px;
+  top: 24px;
+  right: 24px;
 
   cursor: pointer;
-  color: $button-secondary-color;
-  fill: currentColor;
+  
   background-color: transparent;
   border: none;
-  transform: rotate(-90deg);;
-  border-radius: 50%;
 
   &:hover,
   &:focus {
@@ -90,7 +78,7 @@
 
 /* Форма */
 .form__label {
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: $secondary-color;
@@ -119,7 +107,7 @@
 }
 
 .form__comment {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 .form__item {
@@ -174,7 +162,6 @@ input::placeholder, textarea::placeholder {
 .form__button {
   display: flex;
   align-items: center;
-  position: absolute;
   cursor: pointer;
 
   width: 138px;
@@ -226,14 +213,14 @@ input::placeholder, textarea::placeholder {
   text-align: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: $button-secondary-color;
 
   @media screen and (max-width: 1199px) {
     font-weight: 400;
-    font-size: 11px;
+    font-size: 14px;
     left: 79px;
     margin: auto;
   }
@@ -248,33 +235,6 @@ input::placeholder, textarea::placeholder {
   color: $primary-color;
   padding-left: 5px;
   border-bottom: 1px solid $primary-color;
-}
-.form__text {
-  position: absolute;
-  display: block;
-  width: 401px;
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  color: $text-black-color;
-
-  @media screen and (max-width: 480px) {
-    width: 230px;
-    left: 50px;
-    font-size: 12px;
-    line-height: 1.17;
-  }
-
-  @media screen and (max-width: 1199px) {
-    left: 24px;
-    font-size: 12px;
-    line-height: 1.17;
-  }
-
-  @media screen and (min-width: 1200px) {
-    left: 36px;
-    font-size: 14px;
-    line-height: 1.71;
-  }
 }
 
 .form__visually {
@@ -303,5 +263,5 @@ input::placeholder, textarea::placeholder {
 }
 
 .form__checkbox:checked+.form__agreement .form__svg-check {
-  fill: $primary-color;
+  fill: $secondary-color;
 }
