--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -114,34 +114,22 @@ ul {
 @media screen and (max-width: 767px) {
   .modal {
     width: 100%;
-    height: 686px;
     overflow: hidden;
   }
 }
 @media screen and (min-width: 768px) {
   .modal {
     max-width: 498px;
-    height: 686px;
-    padding: 0px 32px;
   }
 }
 
 .modal__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-  top: 8px;
-  margin-left: 430px;
-  width: 30px;
-  height: 30px;
+  top: 24px;
+  right: 24px;
   cursor: pointer;
-  color: #ffffff;
-  fill: currentColor;
   background-color: transparent;
   border: none;
-  transform: rotate(-90deg);
-  border-radius: 50%;
 }
 .modal__button:hover, .modal__button:focus {
   fill: #d41443;
@@ -162,7 +150,7 @@ ul {
 
 /* Форма */
 .form__label {
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: #ffffff;
@@ -190,7 +178,7 @@ ul {
 }
 
 .form__comment {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 }
 
 .form__item {
@@ -254,7 +242,6 @@ input::placeholder, textarea::placeholder {
 .form__button {
   display: flex;
   align-items: center;
-  position: absolute;
   cursor: pointer;
   width: 138px;
   height: 40px;
@@ -299,7 +286,7 @@ input::placeholder, textarea::placeholder {
   text-align: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: #ffffff;
@@ -307,7 +294,7 @@ input::placeholder, textarea::placeholder {
 @media screen and (max-width: 1199px) {
   .form__agreement {
     font-weight: 400;
-    font-size: 11px;
+    font-size: 14px;
     left: 79px;
     margin: auto;
   }
@@ -324,37 +311,6 @@ input::placeholder, textarea::placeholder {
   color: #d41443;
   padding-left: 5px;
   border-bottom: 1px solid #d41443;
-}
-
-.form__text {
-  position: absolute;
-  display: block;
-  width: 401px;
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-@media screen and (max-width: 480px) {
-  .form__text {
-    width: 230px;
-    left: 50px;
-    font-size: 12px;
-    line-height: 1.17;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .form__text {
-    left: 24px;
-    font-size: 12px;
-    line-height: 1.17;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .form__text {
-    left: 36px;
-    font-size: 14px;
-    line-height: 1.71;
-  }
 }
 
 .form__visually {
@@ -383,5 +339,5 @@ input::placeholder, textarea::placeholder {
 }
 
 .form__checkbox:checked + .form__agreement .form__svg-check {
-  fill: #d41443;
+  fill: #ffffff;
 }/*# sourceMappingURL=index.css.map */
