--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,8 +5,8 @@
         <p class="tagline__text">homemade ice cream made</p>
         <p class="tagline__text-secondary">with passion</p>
       </div>
-      <div class="social-contact">
-        <div class="social"> 
+      <div class="social-contact">  
+        <div class="social">
           <a href="https://github.com" class="social__link">
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-github"></use>
@@ -24,7 +24,7 @@
           </a>
         </div>
         <div class="contact">
-          <p class="contact__text">Feel free to contact</p>
+          Feel free to contact
           <a href="tel:+61(0)383766284" class="contact__link">+61 (0) 383 766 284</a>
         </div>
       </div>
