--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -86,6 +86,13 @@ ul {
   justify-content: space-around;
   align-items: baseline;
 }
+@media screen and (max-width: 767px) {
+  .wrap {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 .tagline {
   display: block;
@@ -102,6 +109,12 @@ ul {
   text-transform: uppercase;
   color: #ffa5ba;
 }
+@media screen and (max-width: 767px) {
+  .tagline__text {
+    display: block;
+    font-size: 18px;
+  }
+}
 
 .tagline__text-secondary {
   margin-bottom: 60px;
@@ -113,6 +126,12 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #d41443;
+}
+@media screen and (max-width: 767px) {
+  .tagline__text-secondary {
+    display: block;
+    font-size: 34px;
+  }
 }
 
 .social {
@@ -126,6 +145,14 @@ ul {
   align-items: center;
   justify-content: flex-end;
   width: 50%;
+}
+@media screen and (max-width: 767px) {
+  .social-contact {
+    margin-left: auto;
+    margin-bottom: 56px;
+    display: block;
+    align-items: center;
+  }
 }
 
 .social__link {
@@ -149,9 +176,16 @@ ul {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.86;
   letter-spacing: 0.02em;
   color: #000000;
+}
+@media screen and (max-width: 767px) {
+  .contact {
+    display: block;
+    font-size: 12px;
+    text-align: right;
+  }
 }
 
 .contact__link {
@@ -161,7 +195,15 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.02em;
+  padding-left: 5px;
   color: #d41443;
+}
+@media screen and (max-width: 767px) {
+  .contact__link {
+    display: block;
+    font-size: 12px;
+    text-align: right;
+  }
 }
 
 .footer__copyright {
