--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -36,13 +36,8 @@
     pointer-events: auto;
     overflow-y: auto;
   }
- 
-  @media screen and (max-width: 767px) {
-    width: 100%;
-    overflow: hidden;
-  }
   @media screen and (min-width: 768px) {
-    max-width: 498px;
+    width: 498px
   }
 }
 
