--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -7,6 +7,7 @@
         <h3 class="products-list__title products-list__title--cream">
           ice cream
         </h3>
+        <div class="dots dots--cream"></div>
         <div class="slider-cream">
           <div class="slider__item">
             <p class="products-list__text">
@@ -43,6 +44,7 @@
         <h3 class="products-list__title products-list__title--coffee">
           ice coffee
         </h3>
+        <div class="dots dots--coffee"></div>
         <div class="slider-coffee">
           <div class="slider__item">
             <p class="products-list__text">
@@ -79,6 +81,7 @@
         <h3 class="products-list__title products-list__title--milk">
           milkshakes
         </h3>
+        <div class="dots dots--milkshakes"></div>
         <div class="slider-milkshakes">
           <div class="slider__item">
             <p class="products-list__text">
