--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,16 @@
+    <section class="hero hero--icecream">      
+    <div class="container ">
+        <div class="hero__wrap">
+            <h1 class="hero__title ">ice cream made with <span class="hero__title--passion"> passion </span> </h1>
+        <ul class="hero__list">
+            <li class="hero__item"><p class="hero__list--text"><span class="hero__title--passion">16</span> cafes</p></li>
+            <li class="hero__item"><p class="hero__list--text"><span class="hero__title--passion">16</span> cafes</p></li>
+        </ul>
+        </div>
+        <ul class="hero__buttons">
+            <li><button type="button" class="btn hero__btn--products" onclick="window.location.href = '#products';">Products</button></li>
+            <li><button type="button" class="btn hero__btn--made" onclick="window.location.href = '#products';">How it’s made?</button></li>
+        </ul> 
+    </div> 
+</section>
 
