--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,12 +1,11 @@
-@import url(/Users/joker/Desktop/GoIT_course_material/parcel-project-template/node_modules/modern-normalize/modern-normalize.css);
+@import '../../node_modules/modern-normalize/modern-normalize.css';
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 h1,
@@ -42,14 +41,12 @@ ul {
   padding-right: 20px;
   padding-left: 20px;
 }
-
 @media screen and (min-width: 768px) {
   .container {
     padding-right: 32px;
     padding-left: 32px;
   }
 }
-
 @media screen and (min-width: 1280px) {
   .container {
     padding-right: 16px;
@@ -70,4 +67,368 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/*# sourceMappingURL=index.css.map */
+
+.about {
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 80px;
+  background-image: url(/src/images/mobile/milk-mobile-1x.png);
+  background-repeat: no-repeat;
+  background-position: 0 574px;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .about {
+    background-image: url(/src/images/mobile/milk-mobile-2x.png);
+  }
+}
+@media screen and (min-width: 480px) {
+  .about {
+    width: 480px;
+    margin: 0 auto;
+    background-image: url(/src/images/mobile/milk-mobile-1x.png);
+    background-repeat: no-repeat;
+    background-position: center 535px;
+  }
+}
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .about {
+    background-image: url(/src/images/mobile/milk-mobile-2x.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .about {
+    width: 768px;
+    padding-top: 20px;
+    padding-bottom: 84px;
+    background-image: none;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about {
+    width: 1280px;
+    padding-top: 60px;
+    padding-bottom: 120px;
+  }
+}
+.about__top-text {
+  font-family: "Titan One";
+  font-size: 18px;
+  line-height: 1.17;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffb8ca;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 768px) {
+  .about__top-text {
+    font-size: 26px;
+    line-height: 1.15;
+    margin-bottom: 16px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__top-text {
+    font-size: 30px;
+    line-height: 1.13;
+  }
+}
+.about__top-title {
+  font-family: "Titan One";
+  font-size: 34px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  .about__top-title {
+    font-size: 48px;
+    line-height: 1.15;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__top-title {
+    font-size: 58px;
+    line-height: 1.14;
+    margin-bottom: 79px;
+  }
+}
+.about__content {
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .about__content {
+    margin-bottom: 80px;
+    display: flex;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__content {
+    margin-bottom: 21px;
+    background-image: url(/src/images/desktop/milk-desktop-1x.png);
+    background-repeat: no-repeat;
+  }
+}
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .about__content {
+    background-image: url(/src/images/desktop/milk-desktop-2x.png);
+  }
+}
+.about__picture {
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .about__picture {
+    margin-right: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__picture {
+    margin-right: 140px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .about__img {
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__inform {
+    padding-top: 72px;
+    padding-bottom: 100px;
+  }
+}
+.about__second-title {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  color: #000000;
+  margin-bottom: 20px;
+  width: 220px;
+}
+@media screen and (min-width: 480px) {
+  .about__second-title {
+    margin: 0 auto 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__second-title {
+    width: 334px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.76;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__second-title {
+    width: 463px;
+    font-size: 16px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+    margin-bottom: 32px;
+  }
+}
+.about__second-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  color: #907e82;
+  width: 220px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 480px) {
+  .about__second-text {
+    margin: 0 auto 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__second-text {
+    width: 334px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__second-text {
+    width: 463px;
+    line-height: 1.94;
+    margin-bottom: 32px;
+  }
+}
+.about__bottom-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  color: #907e82;
+  width: 220px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 480px) {
+  .about__bottom-text {
+    margin: 0 auto 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__bottom-text {
+    width: 334px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__bottom-text {
+    width: 463px;
+    line-height: 1.94;
+  }
+}
+.about__btn {
+  position: relative;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  color: #d41443;
+  width: 176px;
+  height: 44px;
+  background-color: #ffffff;
+  border-radius: 22px;
+  cursor: pointer;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 37px;
+  padding-right: 37px;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
+.about__btn:hover, .about__btn:focus {
+  background-color: #ecebeb;
+}
+@media screen and (min-width: 480px) {
+  .about__btn {
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__btn {
+    font-size: 16px;
+    line-height: 1.31;
+    margin: 0;
+  }
+}
+.about__icon {
+  position: absolute;
+  right: 37px;
+  top: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .about-advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -22px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-advantages-list {
+    margin-left: -128px;
+  }
+}
+.about-advantages-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  .about-advantages-list__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 480px) {
+  .about-advantages-list__item {
+    width: 220px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-advantages-list__item {
+    width: calc(33.3333333333% - 22px);
+    margin-left: 22px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-advantages-list__item {
+    max-width: 1280px;
+    width: calc(33.3333333333% - 128px);
+    margin-left: 128px;
+  }
+}
+.about-advantages-list__img {
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .about-advantages-list__img {
+    margin-bottom: 36px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-advantages-list__img {
+    margin-bottom: 40px;
+  }
+}
+.about-advantages-list__title {
+  font-family: "Titan One";
+  font-size: 36px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  width: 98px;
+  height: 56px;
+}
+@media screen and (min-width: 768px) {
+  .about-advantages-list__title {
+    width: 100%;
+    font-family: "Titan One";
+    font-size: 48px;
+    line-height: 1.46;
+    margin-bottom: 13px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-advantages-list__title {
+    margin-bottom: 16px;
+  }
+}
+.about-advantages-list__text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.7;
+  color: #000000;
+  width: 230px;
+}
+@media screen and (min-width: 768px) {
+  .about-advantages-list__text {
+    font-size: 14px;
+    line-height: 1.74;
+    width: 159px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-advantages-list__text {
+    font-size: 16px;
+    line-height: 1.76;
+    letter-spacing: 0.02em;
+    width: 288px;
+  }
+}/*# sourceMappingURL=index.css.map */
