--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -79,16 +79,12 @@
             <use href="./images/symbol-defs.svg#icon-button-arrow"></use>
           </svg>
     </button>
-        </div>
           <div id="open-modal" class="modal-window">
             <div>
               <a href="#" title="Close" class="modal-close">
-                <svg class="contact-close" width="32" height="32" viewBox="0 0 78 78" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <rect width="78" height="78" rx="39" fill="white"/>
-                  <path d="M22.9043 22.2861L55.0948 55.7147" stroke="#C7133E" stroke-width="5.57143" stroke-linecap="round"/>
-                  <path d="M22.2852 55.0947L55.7137 22.9043" stroke="#C7133E" stroke-width="5.57143" stroke-linecap="round"/>
-              </svg>
+                <svg width="15px" height="15px">
+                  <use href="./images/close-cross-red.svg#close"></use>
+                </svg>
               </a>
               <h1>Our location</h1>
               <div>Find us on the map!</div>
