--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -67,8 +67,8 @@
   <div>
       <div class="contact-modal">
           <a class="btn contact-button contact-button__margin" href="#open-modal">Our Locations
-            <svg class="contact-button__svg" width="10" height="15" viewBox="0 0 8 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.61633 1L6.04401 5L1.61633 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <svg class="contact-button__svg" width="10px" height="15px">
+              <use href="./images/button-arrow.svg#icon-button-arrow"></use>
             </svg>
           </a>
           <button
