--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -154,25 +154,30 @@ ul {
 .form__user-text {
   display: block;
   margin-bottom: 10px;
-  margin-top: 24px;
+  margin-top: 16px;
+}
+.form__user-text:first-child {
+  margin-top: 0px;
 }
 
 .form__input {
   position: relative;
   width: 434px;
-  height: 40px;
+  height: 44px;
   padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: none;
   border-radius: 22px;
   outline: none;
   cursor: pointer;
+  margin-bottom: 16px;
 }
 .form__input:focus {
-  border-color: #d41443;
+  border-color: 1px solid #d41443;
 }
 
 .form__comment {
   margin-bottom: 24px;
+  font-size: 14px;
 }
 
 .form__item {
@@ -187,10 +192,13 @@ ul {
   padding: 12px 16px;
   resize: none;
   margin-bottom: 0;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: none;
   border-radius: 22px;
   outline: none;
   cursor: pointer;
+}
+.form__textarea:focus {
+  border-color: 1px solid #d41443;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
@@ -242,6 +250,7 @@ input::placeholder, textarea::placeholder {
   margin-top: 24px;
   background-color: #d41443;
   border-radius: 20px;
+  border: none;
   cursor: pointer;
   transition-property: background-color;
   transition-duration: 250ms;
@@ -333,5 +342,5 @@ input::placeholder, textarea::placeholder {
 }
 
 .form__checkbox:checked + .form__agreement .form__svg-check {
-  fill: #ffffff;
+  fill: #c7133e;
 }/*# sourceMappingURL=index.css.map */
