--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,3 +11,4 @@ $ice-cream-pl-bg-color: #ffb8ca;
 $ice-coffee-pl-bg-color: #f0d1a5;
 $milkshakes-pl-bg-color: #c2e297;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$modal-color: #c7133e;
