--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <button class="modal_button" data-modal-close>
-      <svg width="13.48" height="14">
+  <div class="modal container">
+    <button class="modal__button" data-modal-close>
+      <svg width="14" height="14">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
@@ -15,30 +15,31 @@
         <label class="form__label" for="user_email"><span class="form__user-text">Email</span></label>
         <input class="form__input" type="email" name="email" id="user_email" placeholder="Enter your Email">
       </div>
-      <div class="form__tel">
+      <div class="form__tel"> 
         <label class="form__label" for="user_tel"><span class="form__user-text">Phone</span></label>
         <input class="form__input" type="tel" name="user-tel" id="user_tel" placeholder="Enter your phone number">
       </div>
-      <div class="form__comment">
+      <div class="form__comment"> 
         <label class="form__label" for="user-comment">
           <span class="form__item">Comments</span>
           <textarea class="form__textarea" name="user-comment" placeholder="Enter your comments"
             id="user-comment"></textarea>
-        </label>
+        </label> 
       </div>
       <div class="form__wrap">
         <input class="form__checkbox form__visually" type="checkbox" name="check" id="check">
         <label for="check" class="form__agreement">
           <span class="form__icon-check">
-            <svg>
+            <svg class="form__svg-check">
               <use href="./images/symbol-defs.svg#icon-check-box"></use>
             </svg>
           </span>
+          I agree and accept <a href="" class="accept">the terms of the contract</a>
         </label>
       </div>
       <div class="form__button-wrap">
         <button class="form__button" type="submit"><span class="form__button-text">Send</span></button>
-      </div>
+      </div> 
     </form>
   </div>
 </div>
