--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -10,19 +10,22 @@
   background: rgba(46, 6, 5, 0.3);
   transition: opacity 250ms;
 }
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms;
 }
+
 .backdrop .is-hidden .modal {
   transform: translate(-50%, -50%) scale(1.2);
 }
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
- 
+
   transform: translate(-50%, -50%);
   z-index: 1000;
   overflow-y: scroll;
@@ -36,6 +39,7 @@
     pointer-events: auto;
     overflow-y: auto;
   }
+
   @media screen and (min-width: 768px) {
     width: 498px;
   }
@@ -45,12 +49,9 @@
   position: absolute;
   top: 24px;
   right: 24px;
-
   cursor: pointer;
-  
   background-color: transparent;
   border: none;
-
   &:hover,
   &:focus {
     fill: $button-primary-color;
@@ -83,26 +84,30 @@
 .form__user-text {
   display: block;
   margin-bottom: 10px;
-  margin-top: 24px;
+  margin-top: 16px;
+  &:first-child {
+    margin-top: 0px;
+  }
 }
 
 .form__input {
   position: relative;
   width: 434px;
-  height: 40px;
+  height: 44px;
   padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: none;
   border-radius: 22px;
   outline: none;
   cursor: pointer;
-
+  margin-bottom: 16px;
   &:focus {
-    border-color: $button-primary-color;
+    border-color: 1px solid $button-primary-color;
   }
 }
 
 .form__comment {
   margin-bottom: 24px;
+  font-size: 14px;
 }
 
 .form__item {
@@ -117,19 +122,20 @@
   padding: 12px 16px;
   resize: none;
   margin-bottom: 0;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: none;
   border-radius: 22px;
   outline: none;
-  cursor: pointer;;
+  cursor: pointer;
+  &:focus {
+    border-color: 1px solid $button-primary-color;
+  }
 }
 input::placeholder, textarea::placeholder {
   color: rgba(199, 19, 62, 0.3);
 }
-
 .form__wrap {
   display: flex;
 }
-
 .form__icon-check {
   display: flex;
   justify-content: center;
@@ -165,6 +171,7 @@ input::placeholder, textarea::placeholder {
 
   background-color: $primary-color;
   border-radius: 20px;
+  border: none;
   cursor: pointer;
   transition-property: background-color;
   transition-duration: 250ms;
@@ -226,6 +233,7 @@ input::placeholder, textarea::placeholder {
     margin: auto;
   }
 }
+
 .accept {
   color: $primary-color;
   padding-left: 5px;
@@ -258,5 +266,5 @@ input::placeholder, textarea::placeholder {
 }
 
 .form__checkbox:checked+.form__agreement .form__svg-check {
-  fill: $secondary-color;
+  fill: $modal-color;
 }
