--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -131,6 +131,7 @@ ul {
 
 .modal__text {
   margin-top: 50px;
+  margin-bottom: 24px;
   font-family: "Titan One";
   font-style: normal;
   font-weight: 400;
@@ -239,6 +240,7 @@ input::placeholder, textarea::placeholder {
   justify-content: center;
   align-items: center;
   margin-top: 24px;
+  margin-bottom: 50px;
 }
 
 .form__button {
@@ -280,7 +282,7 @@ input::placeholder, textarea::placeholder {
 }
 
 .form__svg-check {
-  fill: transparent;
+  fill: none;
 }
 
 .form__agreement {
