--- a/src/sass/_product-item.scss
+++ b/src/sass/_product-item.scss
@@ -1,4 +1,6 @@
 .products-list {
+  max-width: 1280px;
+
   @media screen and (min-width: 768px) {
     display: flex;
     margin: -8px;
@@ -6,6 +8,8 @@
 
   @media screen and (min-width: 1280px) {
     margin: -16px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -176,6 +180,7 @@
     width: 100%;
     height: 280px;
     background-image: url(../images/mobile/milkshakes-mobile-1x.png);
+    background-size: 280px 280px;
     background-repeat: no-repeat;
     background-position: center;
 
