--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -36,7 +36,7 @@
           type="button"
         >
           <svg class="button-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-arrow"></use>
+            <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
       </li>
@@ -73,7 +73,7 @@
           type="button"
         >
           <svg class="button-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-arrow"></use>
+            <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
       </li>
@@ -110,7 +110,7 @@
           type="button"
         >
           <svg class="button-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-arrow"></use>
+            <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
       </li>
