--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,1 +1,46 @@
-
+<section class="section-reviews container">
+    <h2 class="hidden">Customer Reviews</h2>
+    <div class="slider">
+        <div class="slider__item">
+            <img class="slider__img" src="./images/desktop/slider-photo-1-desktop-1x.png" alt="woman1">
+            <div class="slider__box">
+                <p class="slider__text">
+                    Lody is very delicious. I want to eat them day and night, morning and evening. Like a hamster in both cheeks
+                    until I
+                    crack, they are so tasty.
+                </p>
+            </div>
+            <h3 class="slider__name">
+                Emily, Los Angeles
+            </h3>
+        </div>
+        <div class="slider__item">
+            <img class="slider__img" src="./images/desktop/slider-photo-2-desktop-1x.png" alt="woman2">
+            <div class="slider__box">
+                <p class="slider__text">
+                    Wysokiej jakości lody, połączenie tradycji i nowoczesnej technologii. Pokochał te lody, że przed przyjazdem
+                    do firmy, po
+                    nauczeniu się więcej i pracy przy produkcji lodów, stał się zagorzałym fanem tej marki.
+                </p>
+            </div>
+            <h3 class="slider__name">
+                Dorota, Krakow
+            </h3>
+        </div>
+        <div class="slider__item">
+            <img class="slider__img" src="./images/desktop/slider-photo-3-desktop-1x.png" alt="woman3">
+            <div class="slider__box">
+                <p class="slider__text">
+                    I love lody. It's like a small dependency. Whether it's a classic waffle cup, or a sandwich in my hands, or
+                    chocolate,
+                    or a banana shape. It doesn't matter if it's big or small, whether it's solid or not. I can hardly walk past
+                    the store
+                    without getting lyod from icecream store.
+                </p>
+            </div>
+            <h3 class="slider__name">
+                Marichka, Kingston
+            </h3>
+        </div>
+    </div>
+   </section>
