--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -70,4 +70,107 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.section-reviews {
+  padding: 80px 0 48px 0;
+}
+
+.slider__item {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.slider__box::before {
+  background-color: transparent;
+  border-radius: 0;
+  background-image: url(../images/desktop/ice-cream-img-2-desktop-2x.jpg);
+  width: 12px;
+  height: 12px;
+}
+
+.slider__box {
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #FAFAFA;
+  padding: 43px 50px 17px;
+  text-align: center;
+}
+
+.slider__box::before {
+  content: "";
+  background-size: contain;
+  display: inline-block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 16px;
+  background-image: url("/src/images/icon-slider-dots.png");
+}
+
+.slider__text {
+  margin: 0;
+  padding: 0;
+}
+
+.slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+}
+
+.slick-dots li {
+  list-style: none;
+  margin-right: 18px;
+}
+
+.slick-dots li.slick-active button {
+  background-color: transparent;
+  border-radius: 0;
+  background-image: url(../images/house.svg);
+  width: 12px;
+  height: 12px;
+}
+
+.slick-dots li button {
+  cursor: pointer;
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #D9D9D9;
+  border-radius: 50%;
+  border: none;
+}
+
+.slick-dots li:last-child {
+  margin-right: 0;
+}
 /*# sourceMappingURL=index.css.map */
