--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -93,7 +93,7 @@
   position: relative;
   width: 100%;
   height: 44px;
-  padding-left: 42px;
+  padding-left: 16px;
   border: none;
   border-radius: 22px;
   outline: none;
@@ -219,17 +219,16 @@ input::placeholder, textarea::placeholder {
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: $button-secondary-color;
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+  }
 
   @media screen and (max-width: 1199px) {
-    font-weight: 400;
-    font-size: 14px;
     left: 79px;
     margin: auto;
   }
 
   @media screen and (min-width: 1200px) {
-    font-weight: 400;
-    font-size: 14px;
     margin: auto;
   }
 }
