--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,7 +2,8 @@
     <h2 class="hidden">Customer Reviews</h2>
     <div class="slider">
         <div class="slider__item">
-            <img class="slider__img" src="./images/desktop/slider-photo-1-desktop-1x.png" alt="woman1">
+            <div class="slider__img"></div>
+            <!-- <img class="slider__img" src="./images/desktop/slider-photo-1-desktop-1x.png" alt="woman1"> -->
             <div class="slider__box">
                 <p class="slider__text">
                     Lody is very delicious. I want to eat them day and night, morning and evening. Like a hamster in both cheeks
